--- a/.github/workflows/publish-mcp-registry.yml
+++ b/.github/workflows/publish-mcp-registry.yml
@@ -85,8 +85,18 @@ jobs:
 
       - name: Install mcp-publisher
         run: |
-          curl -L "https://github.com/modelcontextprotocol/registry/releases/download/v1.0.0/mcp-publisher_1.0.0_linux_amd64.tar.gz" | tar xz mcp-publisher
+          curl -L "https://github.com/modelcontextprotocol/registry/releases/download/latest/mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" | tar xz mcp-publisher
           chmod +x mcp-publisher
+
+      - name: Show mcp-publisher version
+        run: |
+          if ./mcp-publisher --version >/dev/null 2>&1; then
+            ./mcp-publisher --version
+          elif ./mcp-publisher version >/dev/null 2>&1; then
+            ./mcp-publisher version
+          else
+            ./mcp-publisher --help | head -n 5
+          fi
 
       - name: Publish to MCP Registry
         run: |
