--- a/.github/workflows/publish-mcp-registry.yml
+++ b/.github/workflows/publish-mcp-registry.yml
@@ -85,7 +85,17 @@ jobs:
 
       - name: Install mcp-publisher
         run: |
-          curl -L "https://github.com/modelcontextprotocol/registry/releases/download/latest/mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" | tar xz mcp-publisher
+          latest_tag=$(curl -fsSL "https://api.github.com/repos/modelcontextprotocol/registry/releases/latest" | python - <<'PY'
+          import json
+          import sys
+          data = json.load(sys.stdin)
+          tag = data.get("tag_name", "")
+          if not tag:
+            raise SystemExit("无法获取 mcp-publisher 最新 tag")
+          print(tag)
+          PY
+          )
+          curl -fsSL "https://github.com/modelcontextprotocol/registry/releases/download/${latest_tag}/mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" | tar xz mcp-publisher
           chmod +x mcp-publisher
 
       - name: Show mcp-publisher version
