--- a/.github/workflows/publish-mcp-registry.yml
+++ b/.github/workflows/publish-mcp-registry.yml
@@ -78,24 +78,60 @@ jobs:
       - name: Build package
         run: python -m build
 
+      - name: Check PyPI version exists
+        id: pypi
+        shell: bash
+        env:
+          RELEASE_VERSION: ${{ steps.resolve.outputs.version }}
+        run: |
+          set -euo pipefail
+          # If the version already exists on PyPI, skip publishing to avoid blocking
+          # the subsequent MCP Registry publish step.
+          exists=$(python -c 'import json, os, urllib.request
+version=os.environ["RELEASE_VERSION"]
+url="https://pypi.org/pypi/skillhub-mcp/json"
+req=urllib.request.Request(url, headers={"User-Agent":"skillhub-mcp-ci"})
+with urllib.request.urlopen(req, timeout=20) as r:
+  data=json.load(r)
+print("true" if version in (data.get("releases") or {}) else "false")
+' 2>/dev/null || echo "false")
+          echo "exists=${exists}" >> "$GITHUB_OUTPUT"
+
       - name: Publish to PyPI
+        if: steps.pypi.outputs.exists != 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
 
+      - name: Skip PyPI publish
+        if: steps.pypi.outputs.exists == 'true'
+        run: echo "PyPI 已存在该版本，跳过发布。"
+
       - name: Install mcp-publisher
         run: |
-          latest_tag=$(curl -fsSL "https://api.github.com/repos/modelcontextprotocol/registry/releases/latest" | python - <<'PY'
-          import json
-          import sys
-          data = json.load(sys.stdin)
-          tag = data.get("tag_name", "")
-          if not tag:
-            raise SystemExit("无法获取 mcp-publisher 最新 tag")
-          print(tag)
-          PY
+          set -euo pipefail
+          latest_tag=$(
+            curl -fsSL \
+              --retry 5 \
+              --retry-delay 2 \
+              --retry-all-errors \
+              -H "Accept: application/vnd.github+json" \
+              -H "User-Agent: skillhub-mcp-ci" \
+              "https://api.github.com/repos/modelcontextprotocol/registry/releases/latest" \
+              | python -c 'import json,sys; print(json.load(sys.stdin).get("tag_name",""))'
           )
-          curl -fsSL "https://github.com/modelcontextprotocol/registry/releases/download/${latest_tag}/mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" | tar xz mcp-publisher
+          if [[ -z "${latest_tag}" ]]; then
+            echo "无法获取 mcp-publisher 最新 tag"
+            exit 1
+          fi
+
+          curl -fsSL \
+            --retry 5 \
+            --retry-delay 2 \
+            --retry-all-errors \
+            -H "User-Agent: skillhub-mcp-ci" \
+            "https://github.com/modelcontextprotocol/registry/releases/download/${latest_tag}/mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" \
+            | tar xz mcp-publisher
           chmod +x mcp-publisher
 
       - name: Show mcp-publisher version
